--- a/grid.html
+++ b/grid.html
@@ -14,28 +14,32 @@
 <body>
     <div class="grid-container">
      <header class="header">
-        <div class="text">
+        <p class="text">
 Шапка страницы
-</div>
+</p>
     </header>
 
 <main class="main">
-    <div class="text">
-    Основная часть
-</div>
 
+    <p class="text">
+    Основная часть
+</p>
+<div class="grid-container1">
     <section class="section1"><p class="text">Ещё 1</p></section>
     <section class="section2"><p class="text">Ещё 2</p></section>
     <section class="section3"><p class="text">Ещё 3</p></section>
-
-    <aside class="aside"><p class="text">Боковая область</p></aside>
+</div>
 </main>
 
+<aside class="aside"><p class="text">Боковая область</p></aside>
+
 <footer class="footer">
+    <div class="grid-container2">
     <section class="ftrsection1"><p class="textf">Секция футера 1</p></section>
     <section class="ftrsection2"><p class="textf">Секция футера 2</p></section>
     <section class="ftrsection3"><p class="textf">Секция футера 3</p></section>
     <section class="ftrsection4"><p class="textf">Секция футера 4</p></section>
+</div>
 </footer>
 </div>
 </body>
