--- a/1/index.html
+++ b/1/index.html
@@ -51,7 +51,7 @@
                         alt="activity-image"> </section>
                 <section class="section6"> <img class="section6__image6" src="assets\images\menu.svg" alt="menu-image">
                 </section>
-                <section class="section7"> <img class="section7__image7" src="assets\images\grafic.svg"
+                <section class="section7"> <img class="section7__image7" src="assets\images\grafic.png"
                         alt="grafic-image"> </section>
                 <section class="section9"> <img class="section9__image8" src="assets\images\share.svg"
                         alt="social-icons-image"> </section>
@@ -62,7 +62,7 @@
         <footer class="footer">
 
         </footer>
-    </div>
+        </iv>
 </body>
 
 </html>
